# monke

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/monke/: config.hh.in  pack.hh
source/: CMakeLists.txt
source/monke/: CMakeLists.txt  main.cc  pack.cc
